--- a/vlog.html
+++ b/vlog.html
@@ -11,18 +11,9 @@
         <h1>Neler yaptığını anlatma demiştin. Ben de vlog şeklinde yaptım.</h1>
         <div class="video">
             <p>1. Gün</p>
-            <video controls>
-                <source src="videos/video1.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <video controls>
-                <source src="videos/video3.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
-            <video controls>
-                <source src="videos/video2.mp4" type="video/mp4">
-                Your browser does not support the video tag.
-            </video>
+            <iframe width="720" height="480" src="https://www.youtube.com/embed/tw17RO9cpcg?si=Xy5ZKaf-erLVbHhO" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="720" height="480" src="https://www.youtube.com/embed/U8azvRd1RsY?si=Y7WprOs2FZ0fx5_Y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+            <iframe width="720" height="480" src="https://www.youtube.com/embed/udYI6dmFuzk?si=nQzHoVx4kz8hFuhR" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </main>
 </body>
